[package]
name = "simple-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.142", features = ["derive"] }
anemo = { path = "../anemo" }
anemo-cli = { path = "../anemo-cli" }
anemo-tower = { path = "../anemo-tower" }
bincode = "1.3.3"
bytes = { version = "1.1.0", features = ["serde"] }
tokio = { version = "1.20.1", features = ["full"] }
tower = { version = "0.4.12", default-features = false, features = ["full"] }
futures = "0.3.21"
rand = "0.8.5"
ron = "0.8.0"
tracing = "0.1.32"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[build-dependencies]
anemo-build = { path = "../anemo-build" }